--- a/src/Button/Button.module.css
+++ b/src/Button/Button.module.css
@@ -3,10 +3,11 @@
 }
 
 .btn {
-  border: none;
+  border: 1px solid black;
+  border-radius: 5px;
   background-color: transparent;
 }
 
 .label {
-  color: red;
+  color: black;
 }
