--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -1,11 +1,17 @@
-::placeholder {
-  color: gray;
+/* TODO: Typography */
+
+.container {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: var(--hero-align); /* FIXME: No type-safety here */
 }
 
-.hero {
-  padding: 20px;
+.title {
+  margin: 0;
+  font-weight: 700;
 }
 
-.heading {
-  color: black;
+.description {
+  margin: 0;
 }
