--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -1,17 +1,35 @@
-/* TODO: Typography */
-
-.container {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: var(--hero-align); /* FIXME: No type-safety here */
+/* TODO: Move this */
+:global body {
+  font-family: system-ui;
+  line-height: 1.5;
 }
 
-.title {
+.container {
+  padding: 6rem 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.start {
+  align-items: start;
+  text-align: left;
+}
+
+.center {
+  align-items: center;
+  text-align: center;
+}
+
+.heading {
   margin: 0;
+  font-size: 4.5rem;
   font-weight: 700;
+  line-height: 1.1;
+  max-width: 20ch;
 }
 
 .description {
-  margin: 0;
+  margin: 1.5rem 0 0;
+  font-size: 1.25rem;
+  max-width: 50ch;
 }
