Update align class names

--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -12,12 +12,12 @@
   flex-direction: column;
 }
 
-.start {
+.align-start {
   align-items: start;
   text-align: left;
 }
 
-.center {
+.align-center {
   align-items: center;
   text-align: center;
 }
