--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -10,6 +10,7 @@
   padding: 6rem 0;
   display: flex;
   flex-direction: column;
+  background-color: var(--gh-color-canvas-default);
 }
 
 .align-start {
@@ -28,10 +29,12 @@
   font-weight: 700;
   line-height: 1.1;
   max-width: 20ch;
+  color: var(--gh-color-fg-default);
 }
 
 .description {
   margin: 1.5rem 0 0;
   font-size: 1.25rem;
   max-width: 50ch;
+  color: var(--gh-color-fg-default);
 }
