--- a/src/LinkButton/LinkButton.module.css
+++ b/src/LinkButton/LinkButton.module.css
@@ -1,4 +1,4 @@
-.container {
+.LinkButton {
   display: inline-block;
   padding: 1rem 1.5rem;
   font-size: 1.25rem;
@@ -9,12 +9,12 @@
   cursor: pointer;
 }
 
-.variant-primary {
+.LinkButton--primary {
   color: white;
   background-color: black;
 }
 
-.variant-secondary {
+.LinkButton--secondary {
   color: black;
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
