--- a/src/LinkButton/LinkButton.module.css
+++ b/src/LinkButton/LinkButton.module.css
@@ -1,20 +1,33 @@
 .LinkButton {
   display: inline-block;
   padding: 1rem 1.5rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 600;
   line-height: 1;
   text-decoration: none;
   border-radius: 6px;
   cursor: pointer;
+  text-align: center;
 }
 
 .LinkButton--primary {
-  color: white;
-  background-color: black;
+  color: var(--gh-color-fg-onEmphasis);
+  background-color: var(--gh-color-neutral-emphasisPlus);
 }
 
 .LinkButton--secondary {
-  color: black;
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+  color: var(--gh-color-fg-default);
+  box-shadow: inset 0 0 0 1px var(--gh-color-border-default);
+  transition: box-shadow 200ms;
+}
+
+.LinkButton--secondary:hover {
+  box-shadow: inset 0 0 0 2px var(--gh-color-neutral-emphasisPlus);
+}
+
+/* Small breakpoint and up */
+@media screen and (min-width: 544px) {
+  .LinkButton {
+    font-size: 1.25rem;
+  }
 }
