--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -1,10 +1,21 @@
 /* TODO: Extract these global styles */
+/* TODO: Replace hard-coded values with design tokens */
 :global body {
-  font-family: system-ui; /* TODO: Use Alliance No. 1 or Mona Sans */
+  font-family: 'Alliance1', 'Alliance1Fallback', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   line-height: 1.5;
 }
 
-/* TODO: Replace hard-coded values with design tokens */
+:global h1,
+:global h2,
+:global h3,
+:global h4,
+:global h5,
+:global h6 {
+  font-family: 'Alliance1', 'Alliance1HeaderFallback', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-feature-settings: unset;
+}
 
 .Hero {
   padding: 6rem 0;
