setup variable font playground

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -12,7 +12,6 @@
   size-adjust: 104.5%;
   ascent-override: 71%;
   src: local(Arial);
-  font-synthesis: none;
 }
 
 @font-face {
@@ -20,5 +19,12 @@
   size-adjust: 103.1%;
   ascent-override: 70%;
   src: local(Arial Bold);
-  font-synthesis: none;
+}
+
+@font-face {
+  font-family: 'Alliance2';
+  src: url('./alliance-2.woff2') format('woff2 supports variations'),
+    url('./alliance-2.woff2') format('woff2-variations');
+  font-weight: 200 900;
+  font-display: swap;
 }
