--- a/src/LinkButton/LinkButton.module.css
+++ b/src/LinkButton/LinkButton.module.css
@@ -3,12 +3,14 @@
   align-items: center;
   justify-content: center;
   padding: 1rem 1.5rem;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1;
+
   text-decoration: none;
   border-radius: 6px;
   cursor: pointer;
+}
+
+.LinkButton--label {
+  font-weight: var(--base-text-weight-semibold);
 }
 
 .LinkButton-arrow {
@@ -28,11 +30,4 @@
 
 .LinkButton--secondary:hover {
   box-shadow: inset 0 0 0 2px var(--gh-color-neutral-emphasisPlus);
-}
-
-/* Small breakpoint and up */
-@media screen and (min-width: 544px) {
-  .LinkButton {
-    font-size: 1.25rem;
-  }
 }
