--- a/src/LinkButton/LinkButton.module.css
+++ b/src/LinkButton/LinkButton.module.css
@@ -22,6 +22,10 @@
   background-color: var(--gh-color-neutral-emphasisPlus);
 }
 
+.LinkButton--label-primary {
+  color: var(--gh-color-fg-onEmphasis);
+}
+
 .LinkButton--secondary {
   color: var(--gh-color-fg-default);
   box-shadow: inset 0 0 0 1px var(--gh-color-border-default);
