--- a/src/Heading/Heading.module.css
+++ b/src/Heading/Heading.module.css
@@ -3,57 +3,57 @@
 }
 
 .Heading--1000 {
-  font-weight: var(--brand-text-1000-weight);
-  font-size: var(--brand-text-1000-size);
-  line-height: var(--brand-text-1000-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-1000-letterspacing);
+  font-weight: var(--brand-text-weight-1000);
+  font-size: var(--brand-text-size-1000);
+  line-height: var(--brand-text-lineHeight-1000);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-text-letterspacing-1000);
 }
 
 .Heading--900 {
-  font-weight: var(--brand-text-900-weight);
-  font-size: var(--brand-text-900-size);
-  line-height: var(--brand-text-900-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-900-letterspacing);
+  font-weight: var(--brand-text-weight-900);
+  font-size: var(--brand-text-size-900);
+  line-height: var(--brand-text-lineHeight-900);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-text-letterspacing-900);
 }
 
 .Heading--800 {
-  font-weight: var(--brand-text-800-weight);
-  font-size: var(--brand-text-800-size);
-  line-height: var(--brand-text-800-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-800-letterspacing);
+  font-weight: var(--brand-text-weight-800);
+  font-size: var(--brand-text-size-800);
+  line-height: var(--brand-text-lineHeight-800);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-text-letterspacing-800);
 }
 
 .Heading--700 {
-  font-weight: var(--brand-text-heading-700-weight);
-  font-size: var(--brand-text-700-size);
-  line-height: var(--brand-text-700-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-700-letterspacing);
+  font-weight: var(--brand-heading-weight-700);
+  font-size: var(--brand-text-size-700);
+  line-height: var(--brand-text-lineHeight-700);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-heading-letterspacing-700);
 }
 
 .Heading--600 {
-  font-weight: var(--brand-text-heading-600-weight);
-  font-size: var(--brand-text-600-size);
-  line-height: var(--brand-text-600-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-heading-600-letterspacing);
+  font-weight: var(--brand-heading-weight-600);
+  font-size: var(--brand-text-size-600);
+  line-height: var(--brand-text-lineHeight-600);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-heading-letterspacing-600);
 }
 
 .Heading--500 {
-  font-weight: var(--brand-text-heading-500-weight);
-  font-size: var(--brand-text-500-size);
-  line-height: var(--brand-text-500-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-heading-500-letterspacing);
+  font-weight: var(--brand-heading-weight-500);
+  font-size: var(--brand-text-size-500);
+  line-height: var(--brand-text-lineHeight-500);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-heading-letterspacin-500g);
 }
 
 .Heading--400 {
-  font-weight: var(--brand-text-heading-400-weight);
-  font-size: var(--brand-text-400-size);
-  line-height: var(--brand-text-400-lineHeight);
-  font-family: var(--brand-text-heading-fontFamily);
-  letter-spacing: var(--brand-text-heading-400-letterspacing);
+  font-weight: var(--brand-heading-weight-400);
+  font-size: var(--brand-text-size-400);
+  line-height: var(--brand-text-lineHeight-400);
+  font-family: var(--brand-heading-fontFamily);
+  letter-spacing: var(--brand-heading-letterspacing-400);
 }
