--- a/src/Hero/Hero.module.css
+++ b/src/Hero/Hero.module.css
@@ -28,7 +28,7 @@
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   width: 100%;
 }
 
