--- a/src/LinkButton/LinkButton.module.css
+++ b/src/LinkButton/LinkButton.module.css
@@ -18,20 +18,20 @@
 }
 
 .LinkButton--primary {
-  color: var(--gh-color-fg-onEmphasis);
-  background-color: var(--gh-color-neutral-emphasisPlus);
+  color: var(--brand-color-fg-onEmphasis);
+  background: var(--brand-Button-background-default);
 }
 
 .LinkButton--label-primary {
-  color: var(--gh-color-fg-onEmphasis);
+  color: var(--brand-color-fg-onEmphasis);
 }
 
 .LinkButton--secondary {
-  color: var(--gh-color-fg-default);
+  color: var(--brand-color-fg-default);
   box-shadow: inset 0 0 0 1px var(--gh-color-border-default);
   transition: box-shadow 200ms;
 }
 
 .LinkButton--secondary:hover {
-  box-shadow: inset 0 0 0 2px var(--gh-color-neutral-emphasisPlus);
+  box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
 }
