Add base color scale and functional tokens (#29)

--- a/.storybook/preview.module.css
+++ b/.storybook/preview.module.css
@@ -3,3 +3,11 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 100vh;
 }
+
+.color-mode-all > [data-color-mode] {
+  background-color: var(--brand-color-canvas-default);
+}
+
+body {
+  background-color: var(--brand-color-canvas-default);
+}
