--- a/src/LinkButton/LinkButton.module.css
+++ b/src/LinkButton/LinkButton.module.css
@@ -3,10 +3,15 @@
   align-items: center;
   justify-content: center;
   padding: 1rem 1.5rem;
-
+  transition: box-shadow 0.2s;
   text-decoration: none;
   border-radius: 6px;
   cursor: pointer;
+}
+
+.LinkButton:focus {
+  outline: 0;
+  box-shadow: var(--brand-Button-shadow-focus), var(--brand-Button-shadow-hover);
 }
 
 .LinkButton--label {
@@ -18,20 +23,25 @@
 }
 
 .LinkButton--primary {
-  color: var(--gh-color-fg-onEmphasis);
-  background-color: var(--gh-color-neutral-emphasisPlus);
+  color: var(--brand-color-text-onEmphasis);
+  background-color: var(--brand-Button-background-base);
+  background: var(--brand-Button-background-overlay);
+}
+
+.LinkButton--primary:hover {
+  box-shadow: var(--brand-Button-shadow-hover);
 }
 
 .LinkButton--label-primary {
-  color: var(--gh-color-fg-onEmphasis);
+  color: var(--brand-color-text-onEmphasis);
 }
 
 .LinkButton--secondary {
-  color: var(--gh-color-fg-default);
-  box-shadow: inset 0 0 0 1px var(--gh-color-border-default);
+  color: var(--brand-color-text-default);
+  box-shadow: inset 0 0 0 1px var(--brand-color-border-default);
   transition: box-shadow 200ms;
 }
 
 .LinkButton--secondary:hover {
-  box-shadow: inset 0 0 0 2px var(--gh-color-neutral-emphasisPlus);
+  box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
 }
