--- a/src/Text/Text.module.css
+++ b/src/Text/Text.module.css
@@ -3,11 +3,11 @@
 }
 
 .Text--default {
-  color: var(--gh-color-fg-default);
+  color: var(--brand-color-text-default);
 }
 
 .Text--muted {
-  color: var(--gh-color-fg-muted);
+  color: var(--brand-color-text-muted);
 }
 
 .Text--700 {
