--- a/src/River/River.module.css
+++ b/src/River/River.module.css
@@ -1,8 +1,8 @@
 .river {
   display: grid;
-  gap: var(--base-size-24);
+  gap: var(--brand-River-gap-column);
   grid-template-rows: 1fr;
-  margin: var(--base-size-48) 0;
+  margin: var(--brand-River-margin-vertical);
 }
 
 .visual {
@@ -25,13 +25,11 @@
 }
 
 .visual--has-shadow {
-  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.0174624), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0235573),
-    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0282784), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.0339075),
-    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.04317), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.07);
+  box-shadow: var(--brand-River-visual-shadow);
 }
 
 .heading {
-  margin-bottom: var(--base-size-8);
+  margin-bottom: var(--brand-River-gap-heading-bottom);
 }
 
 .call-to-action {
