--- a/src/River/River.module.css
+++ b/src/River/River.module.css
@@ -1,30 +1,26 @@
-.river {
+.River {
   display: grid;
   gap: var(--brand-River-gap-column);
-  grid-template-rows: 1fr;
+  grid-auto-rows: min-content;
   margin: var(--brand-River-layout-margin-vertical);
 }
 
-.visual {
+.Visual {
   position: relative;
-  order: 2;
 }
 
-.content {
-  order: 1;
-}
-
-.river--align-center {
+.River--align-center {
   text-align: center;
 }
 
-.visual img,
-.visual video {
+.Visual img,
+.Visual video {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
-.visual--has-shadow {
+.Visual--has-shadow {
   box-shadow: var(--brand-River-visual-shadow);
 }
 
@@ -42,61 +38,59 @@
 
 /* Small breakpoint and up */
 @media screen and (min-width: 544px) {
-  .river {
+  .River {
     grid-template-rows: unset;
   }
-  .river--50-50 {
+  .River--50-50 {
     grid-template-columns: [content] 1fr [visual] 1fr;
   }
 
-  .river--60-40 {
+  .River--60-40 {
     grid-template-columns: [content] calc(40% - var(--base-size-12)) [visual] calc(60% - var(--base-size-12));
   }
 
-  .river--align-left {
+  .River--align-left {
     grid-template-areas: 'content visual';
   }
 
-  .river--align-right {
+  .River--align-right {
     grid-template-areas: 'visual content';
   }
 
-  .river--align-right.river--60-40 {
+  .River--align-right.River--60-40 {
     grid-template-columns: [visual] calc(60% - var(--base-size-12)) [content] calc(40% - var(--base-size-12));
   }
 
-  .content {
+  .Content {
     display: grid;
     align-content: center;
     grid-area: content;
   }
 
-  .visual {
+  .Visual {
     grid-area: visual;
   }
 
-  .river--align-center {
-    grid-template-rows: 1fr;
+  .River--align-center {
+    grid-auto-rows: min-content;
     grid-template-columns: unset;
   }
 
-  .river--align-center .content,
-  .river--align-center .visual {
+  .River--align-center .Content,
+  .River--align-center .Visual {
     grid-area: unset;
     justify-self: center;
   }
 
-  .river--align-center .bodyText {
+  .River--align-center .bodyText {
     max-width: 600px;
     justify-self: center;
   }
 
-  .river--align-center .visual {
-    order: 2;
+  .River--align-center .Visual {
     margin-bottom: var(--base-size-48);
   }
-  .river--align-center .content {
-    order: 1;
+  .River--align-center .Content {
     margin-top: var(--base-size-48);
   }
 }
