--- a/src/River/River.module.css
+++ b/src/River/River.module.css
@@ -5,7 +5,7 @@
   margin: var(--brand-River-layout-margin-vertical);
 }
 
-.Visual {
+.River__visual {
   position: relative;
 }
 
@@ -13,26 +13,26 @@
   text-align: center;
 }
 
-.Visual img,
-.Visual video {
+.River__visual img,
+.River__visual video {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.Visual--has-shadow {
+.River__visual--has-shadow {
   box-shadow: var(--brand-River-visual-shadow);
 }
 
-.heading {
+.River__heading {
   margin-bottom: var(--brand-River-gap-heading-bottom);
 }
 
-.call-to-action {
+.River__call-to-action {
   margin-top: var(--base-size-24);
 }
 
-.text strong {
+.River__text strong {
   color: var(--brand-color-text-default);
 }
 
@@ -61,13 +61,13 @@
     grid-template-columns: [visual] calc(60% - var(--base-size-12)) [content] calc(40% - var(--base-size-12));
   }
 
-  .Content {
+  .River__content {
     display: grid;
     align-content: center;
     grid-area: content;
   }
 
-  .Visual {
+  .River__visual {
     grid-area: visual;
   }
 
@@ -76,21 +76,21 @@
     grid-template-columns: unset;
   }
 
-  .River--align-center .Content,
-  .River--align-center .Visual {
+  .River--align-center .River__content,
+  .River--align-center .River__visual {
     grid-area: unset;
     justify-self: center;
   }
 
-  .River--align-center .bodyText {
+  .River--align-center .River__body-text {
     max-width: 600px;
     justify-self: center;
   }
 
-  .River--align-center .Visual {
+  .River--align-center .River__visual {
     margin-bottom: var(--base-size-48);
   }
-  .River--align-center .Content {
+  .River--align-center .River__content {
     margin-top: var(--base-size-48);
   }
 }
