fix safari rendering issue

--- a/src/Accordion/Accordion.module.css
+++ b/src/Accordion/Accordion.module.css
@@ -24,6 +24,9 @@
   position: relative;
   display: list-item;
 }
+.Accordion__summary::-webkit-details-marker {
+  display: none;
+}
 
 .Accordion__summary-heading {
   padding-left: 32px;
