--- a/src/Accordion/Accordion.module.css
+++ b/src/Accordion/Accordion.module.css
@@ -34,6 +34,7 @@
 
 .Accordion__summary::before,
 .Accordion__summary::after {
+  font-family: var(--brand-fontStack-monospace);
   display: list-item;
   cursor: pointer;
   position: absolute;
