--- a/src/Accordion/Accordion.module.css
+++ b/src/Accordion/Accordion.module.css
@@ -33,8 +33,8 @@
 }
 
 .Accordion__summary:focus-visible {
-  /* FIXME with a focus design token */
-  outline: 2px solid var(--brand-color-border-default);
+  /* FIXME with a global focus design token */
+  outline: 2px solid var(--brand-color-accent-fg);
 }
 
 .Accordion__summary::before,
