--- a/src/Accordion/Accordion.module.css
+++ b/src/Accordion/Accordion.module.css
@@ -5,7 +5,7 @@
 
 .Accordion::after {
   content: '';
-  border-bottom: 1px solid var(--brand-color-border-default);
+  border-bottom: var(--primer-borderWidth-thin) solid var(--brand-color-border-default);
   position: absolute;
   bottom: 0;
   left: 0;
@@ -14,7 +14,7 @@
 }
 
 .Accordion:hover::after {
-  border-width: 3px;
+  border-width: var(--primer-borderWidth-thick);
 }
 
 .Accordion__summary {
@@ -33,7 +33,7 @@
 }
 
 .Accordion__summary:focus-visible {
-  outline: 2px solid var(--brand-color-focus-default);
+  outline: var(--primer-borderWidth-normal) solid var(--brand-color-focus-default);
 }
 
 .Accordion__summary::before,
